// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traverseEntity > Empty Foo entity 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo entity with TwoStrings value item 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": "string1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": "string1",
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": [
      "string2.1",
      "string2.2",
    ],
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      0,
    ],
    "type": "fieldItem",
    "value": "string2.1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      1,
    ],
    "type": "fieldItem",
    "value": "string2.2",
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "valueItem",
    "valueItem": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "path": "entity.fields.twoStrings.string1",
    "type": "field",
    "value": "two-1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string1",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
      "string1",
    ],
    "type": "fieldItem",
    "value": "two-1",
  },
  {
    "path": "entity.fields.twoStrings.string2",
    "type": "field",
    "value": "two-2",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string2",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
      "string2",
    ],
    "type": "fieldItem",
    "value": "two-2",
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo entity with rich text with TwoStrings value item 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": {
      "root": {
        "children": [
          {
            "data": {
              "string1": "two-1",
              "string2": "two-2",
              "type": "TwoStrings",
            },
            "format": "",
            "type": "valueItem",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "type": "root",
        "version": 1,
      },
    },
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": {
      "root": {
        "children": [
          {
            "data": {
              "string1": "two-1",
              "string2": "two-2",
              "type": "TwoStrings",
            },
            "format": "",
            "type": "valueItem",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "type": "root",
        "version": 1,
      },
    },
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "node": {
      "children": [
        {
          "data": {
            "string1": "two-1",
            "string2": "two-2",
            "type": "TwoStrings",
          },
          "format": "",
          "type": "valueItem",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "richTextNode",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "node": {
      "data": {
        "string1": "two-1",
        "string2": "two-2",
        "type": "TwoStrings",
      },
      "format": "",
      "type": "valueItem",
      "version": 1,
    },
    "path": [
      "entity",
      "fields",
      "richText",
      0,
    ],
    "type": "richTextNode",
  },
  {
    "path": "entity.fields.richText[0].data",
    "type": "valueItem",
    "valueItem": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "path": "entity.fields.richText[0].data.string1",
    "type": "field",
    "value": "two-1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string1",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
      0,
      "data",
      "string1",
    ],
    "type": "fieldItem",
    "value": "two-1",
  },
  {
    "path": "entity.fields.richText[0].data.string2",
    "type": "field",
    "value": "two-2",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string2",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
      0,
      "data",
      "string2",
    ],
    "type": "fieldItem",
    "value": "two-2",
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo with adminOnly field (published) 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo with two strings in list 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": [
      "string1",
      "string2",
    ],
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      0,
    ],
    "type": "fieldItem",
    "value": "string1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      1,
    ],
    "type": "fieldItem",
    "value": "string2",
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect boolean, get boolean[] 1`] = `
[
  {
    "path": "entity.fields.boolean",
    "type": "field",
    "value": [
      true,
      false,
    ],
  },
  {
    "message": "Expected single Boolean, got a list",
    "path": "entity.fields.boolean",
    "type": "error",
  },
  {
    "path": "entity.fields.booleanList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect boolean, get string 1`] = `
[
  {
    "path": "entity.fields.boolean",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected a boolean, got string",
    "path": "entity.fields.boolean",
    "type": "error",
  },
  {
    "path": "entity.fields.booleanList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect boolean[], get boolean 1`] = `
[
  {
    "path": "entity.fields.boolean",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "boolean",
      "required": false,
      "type": "Boolean",
    },
    "path": [
      "entity",
      "fields",
      "boolean",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of Boolean, got boolean",
    "path": "entity.fields.booleanList",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect entity, get entity[] 1`] = `
[
  {
    "path": "entity.fields.entity",
    "type": "field",
    "value": [
      {
        "id": "id1",
      },
      {
        "id": "id2",
      },
    ],
  },
  {
    "message": "Expected single Entity, got a list",
    "path": "entity.fields.entity",
    "type": "error",
  },
  {
    "path": "entity.fields.entityList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect entity, get string 1`] = `
[
  {
    "path": "entity.fields.entity",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected an entity reference, got string",
    "path": "entity.fields.entity",
    "type": "error",
  },
  {
    "path": "entity.fields.entityList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect entity[], get entity 1`] = `
[
  {
    "path": "entity.fields.entity",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "list": false,
      "name": "entity",
      "required": false,
      "type": "Entity",
    },
    "path": [
      "entity",
      "fields",
      "entity",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.entityList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect richText, get richText[] 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": [
      {
        "root": {
          "children": [
            {
              "children": [
                {
                  "detail": 0,
                  "format": 0,
                  "mode": "normal",
                  "style": "",
                  "text": "hello",
                  "type": "text",
                  "version": 1,
                },
              ],
              "direction": "ltr",
              "format": "",
              "indent": 0,
              "type": "paragraph",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "type": "root",
          "version": 1,
        },
      },
    ],
  },
  {
    "message": "Expected single RichText, got a list",
    "path": "entity.fields.richText",
    "type": "error",
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect string, get string[] 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": [
      "string1",
      "string2",
    ],
  },
  {
    "message": "Expected single String, got a list",
    "path": "entity.fields.string",
    "type": "error",
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect string[], get string[] 1`] = `
[
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of String, got string",
    "path": "entity.fields.stringList",
    "type": "error",
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseValueItem > Empty TwoStrings value item 1`] = `
[
  {
    "path": "valueItem",
    "type": "valueItem",
    "valueItem": {
      "type": "TwoStrings",
    },
  },
  {
    "path": "valueItem.string1",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string1",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "valueItem",
      "string1",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "valueItem.string2",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string2",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "valueItem",
      "string2",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;
